add ServerCommunication class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'com.android.application'
+    apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
+
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.heliocratic.mikola.firstproject"
